# si

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  readme
src/: appmath.c  appmath.h  arena.c  arena.h  array.ct  array.ctypes  array.ht  box.c  box.h  buffer.c  buffer.h  colorscheme.c  colorscheme.h  draw.c  draw.h  file.c  file.h  line.c  line.h  logic.c  logic.h  main.c  request.h  state.c  state.h  textInput.h  thing.h  types.h
test/: appmath.cc  line.cc
